fix minor formatting errors

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,49 +1,16 @@
-<!-- <div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
-    </table>
-  </div>
-</div> -->
-
-<div class="row">        <!-- first two days -->
-  <div class="col-md-6"> <!-- left column -->
+<div class="row">        
+  <div class="col-md-6"> 
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>  <!-- 1.5 hours -->
+      <tr> <td>10:30</td>  <td>Morning break</td> </tr>  
       <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr> <!-- 1hr -->
-      <tr> <td>13:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>>
-      <tr> <td>14:30</td>  <td>Finished</td> <!-- 1.5 hours --> </tr>>
+      <tr> <td>12:00</td>  <td>Lunch break</td> </tr> 
+      <tr> <td>13:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
+      <tr> <td>14:30</td>  <td>Finished</td> </tr>
     </table>
   </div>
-  <div class="col-md-6"> <!-- right column -->
+  <div class="col-md-6"> 
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
@@ -51,12 +18,12 @@
       <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>14:30</td>  <td>Finished</td> <!-- 1.5 hours --> </tr>>
+      <tr> <td>14:30</td>  <td>Finished</td> </tr>
     </table>
   </div>
 </div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
+<div class="row">        
+  <div class="col-md-6"> 
     <h3>Day 3</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Data Analysis with R</td> </tr>
@@ -64,7 +31,7 @@
       <tr> <td>11:00</td>  <td>Data Analysis with R (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Data Analysis with R (Continued)</td> </tr>
-      <tr> <td>14:30</td>  <td>Finished</td> <!-- 1.5 hours --> </tr>>
+      <tr> <td>14:30</td>  <td>Finished</td> <!-- 1.5 hours --> </tr>
     </table>
   </div>
 </div>
