--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -2,8 +2,10 @@
 {% unless curricula contains site.curriculum %}
 {% include warning-curriculum.html %}
 {% endunless %}
-
+{% include install_instructions/ChatGPT.html %}
 {% include install_instructions/shell.html %}
+{% include install_instructions/shell.html %}
+
 {% include install_instructions/git.html %}
 {% include install_instructions/editor.html %}
 
