--- a/_includes/install_instructions/ChatGPT.html
+++ b/_includes/install_instructions/ChatGPT.html
@@ -5,7 +5,7 @@
 ChatGPT
 {% endcomment %}
 <p>
-  If you haven't used ChatGPT before and want to try it for these lessons, before, go to the
+  If you haven't used ChatGPT before and want to try it for these lessons, go to the
   <a href="https://chat.openai.com/auth/login">official website</a>
   and sign up for an OpenAI account.
 </p>
